--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zk</groupId>
-    <artifactId>git_test</artifactId>
+    <artifactId>git_test666</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
